@@ -6,6 +6,9 @@
 	DrawDashPolygon when parsing SVG images".
 	(DrawPrimitive): Add arithmetic overflow checks when converting
 	computed coordinates from 'double' to 'long'.
+	(DrawImage): Don't destroy draw_info in graphic_context when
+	draw_info has not been allocated yet.  Problem reported via email
+	by Sami Supperi on Thu, 14 Feb 2019.
 
 	* coders/jpeg.c (ReadJPEGImage): JPEG files are observed to
 	provide compression ratios as high as 2500 so allow for that.
